Added user_id to DB and security aut to api
